--- a/tasks/config/power_and_screen.yml
+++ b/tasks/config/power_and_screen.yml
@@ -18,9 +18,11 @@
   - name: "For screen/power, set screensaver-theme to '{{ screensaver_theme }}'"
     community.general.dconf:
       key: "/org/mate/screensaver/themes"
-      value: "['{{ screensaver_theme }}']"
+      value: "{{ theme }}"
       state: present
     when: screensaver_delay_time != 0
+    vars:
+      theme: "['{{ screensaver_theme }}']"
   - name: "For screen/power, set battery-power screen blank delay to {{ blank_setting }}"
     community.general.dconf:
       key: "/org/mate/power-manager/sleep-display-battery"
