--- a/tasks/config/power_and_screen.yml
+++ b/tasks/config/power_and_screen.yml
@@ -18,7 +18,7 @@
   - name: "For screen/power, set screensaver-theme to '{{ screensaver_theme }}'"
     community.general.dconf:
       key: "/org/mate/screensaver/themes"
-      value: "{{ theme }}"
+      value: "{{ theme | list }}"
       state: present
     when: screensaver_delay_time != 0
     vars:
