Try args-warn false to silence warning

--- a/tasks/config/power_and_screen.yml
+++ b/tasks/config/power_and_screen.yml
@@ -22,6 +22,8 @@
       state: present
     vars:
       theme: "['{{ screensaver_theme }}']"
+    args:
+      warn: false
     when: screensaver_delay_time != 0
   - name: "For screen/power, set battery-power screen blank delay to {{ blank_setting }}"
     community.general.dconf:
