--- a/tasks/config/power_and_screen.yml
+++ b/tasks/config/power_and_screen.yml
@@ -15,13 +15,11 @@
     vars:
       delay_time: "{{ screensaver_delay_time }}"
     when: screensaver_delay_time != 0
-  - name: "For screen/power, set screensaver-theme to '{{ theme }}'"
+  - name: "For screen/power, set screensaver-theme to '{{ screensaver_theme }}'"
     community.general.dconf:
       key: "/org/mate/screensaver/themes"
-      value: "{{ theme | string }}"
+      value: "{{ screensaver_theme | string }}"
       state: present
-    vars:
-      theme: ['{{ screensaver_theme }}']
     when: screensaver_delay_time != 0
   - name: "For screen/power, set battery-power screen blank delay to {{ blank_setting }}"
     community.general.dconf:
