For poweroff delay, use local var to silence warn

--- a/tasks/config/power_and_screen.yml
+++ b/tasks/config/power_and_screen.yml
@@ -40,11 +40,13 @@
       state: present
     vars:
       set_lock: "{{ 'true' if lock_with_screensaver else 'false' }}"
-  - name: "For screen/power, set poweroff/logout dialog-delay to {{ poweroff_dialog_delay }} seconds"
+  - name: "For screen/power, set poweroff/logout dialog-delay to {{ delay_time }} seconds"
     community.general.dconf:
       key: "/org/mate/desktop/session/logout-timeout"
-      value: "{{ poweroff_dialog_delay }}"
+      value: "{{ delay_time }}"
       state: present
+    vars:
+      delay_time: "{{ screensaver_delay_time }}"
   vars:
     blank_min: "{{ screen_blank_time * 60 }}"
     blank_setting: "{{ 'no-screen-blank' if (blank_min == 0) else screen_blank_time }}{{ '' if (blank_min == 0) else ' minutes' }}"
