Quote lock-screen-picture-filename path

--- a/tasks/config/power_and_screen.yml
+++ b/tasks/config/power_and_screen.yml
@@ -48,7 +48,7 @@
   - name: "For screen/power, set screensaver lock background to '{{ lock_background_picture }}'"
     community.general.dconf:
       key: "/org/mate/screensaver/picture-filename"
-      value: "{{ lock_background_picture }}"
+      value: "'{{ lock_background_picture }}'"
       state: present
     when: lock_with_screensaver
   - name: "For screen/power, set poweroff/logout dialog-delay to {{ delay_time }} seconds"
