--- a/tasks/config/power_and_screen.yml
+++ b/tasks/config/power_and_screen.yml
@@ -23,6 +23,12 @@
     vars:
       theme: ['{{ screensaver_theme }}']
     when: screensaver_delay_time != 0
+  - name: "For screen/power, set screensaver-mode to 'single'"
+    community.general.dconf:
+      key: "/org/mate/screensaver/mode"
+      value: "'single'"
+      state: present
+    when: screensaver_delay_time != 0
   - name: "For screen/power, set AC-power screen blank delay to {{ blank_setting }}"
     community.general.dconf:
       key: "/org/mate/power-manager/sleep-display-ac"
