Top panel: set height/size

--- a/tasks/config/panels.yml
+++ b/tasks/config/panels.yml
@@ -8,3 +8,13 @@
   become: true
   become_user: "{{ user_name }}"
 
+- name: "Configure top panel settings"
+  block:
+    - name: "For top panel, set panel-size to {{ top_panel_size }}"
+      community.general.dconf:
+        key: "/org/mate/panel/toplevels/top/size"
+        value: "{{ top_panel_size }}"
+        state: present
+  become: true
+  become_user: "{{ user_name }}"
+
