--- a/defaults/main/panels.yml
+++ b/defaults/main/panels.yml
@@ -1,3 +1,6 @@
 # available items for both top and bottom panels
 panels_available_items: ['menu-bar', 'notification area', 'clock', 'show-desktop', 'window-list', 'object-0']
 
+# height of the top panel (note: increases icon sizes as well)
+top_panel_size: 38
+
