--- a/defaults/main/panels.yml
+++ b/defaults/main/panels.yml
@@ -1,3 +1,6 @@
 # height of the top panel (note: increases icon sizes as well)
 top_panel_size: 38
 
+# height of the bottom panel (note: increases icon sizes as well)
+bottom_panel_size: 32
+
