Config num-workspaces setting to 1, by default

--- a/defaults/main/windowing.yml
+++ b/defaults/main/windowing.yml
@@ -1,3 +1,6 @@
 # enable window movement and appearance animations
 windowing_animations: true
 
+# total number of workspaces in the window manager
+windowing_num_workspace: 1
+
