--- a/tasks/config/windowing.yml
+++ b/tasks/config/windowing.yml
@@ -7,11 +7,13 @@
         state: present
       vars:
         use_animations: "{{ 'true' if windowing_animations else 'false' }}"
-    - name: "For windowing, set num-workspaces to {{ windowing_num_workspace }}"
+    - name: "For windowing, set num-workspaces to {{ num_wkspc }}"
       community.general.dconf:
         key: "/org/mate/marco/general/num-workspaces"
-        value: "{{ windowing_num_workspace }}"
+        value: "{{ num_wkspc }}"
         state: present
+      vars:
+        num_wkspc: "{{ windowing_num_workspaces }}"
   become: true
   become_user: "{{ user_name }}"
 
