--- a/defaults/main/panels.yml
+++ b/defaults/main/panels.yml
@@ -1,6 +1,9 @@
 # available items for both top and bottom panels
 panels_available_items: ['menu-bar', 'notification-area', 'clock', 'show-desktop', 'window-list']
 
+# color/transparency for both top and bottom panels
+panels_background_color: "rgba(36,31,49,0.80)"
+
 # height of the top panel (note: increases icon sizes as well)
 top_panel_size: 38
 
