--- a/tasks/config/panels.yml
+++ b/tasks/config/panels.yml
@@ -41,6 +41,18 @@
         state: present
       vars:
         size: "{{ bottom_panel_size }}"
+    - name: "For bottom panel, set background-type to '{{ bg_type }}'"
+      community.general.dconf:
+        key: "/org/mate/panel/toplevels/bottom/background/type"
+        value: "'{{ bg_type }}'"
+        state: present
+      vars:
+        bg_type: "color"
+    - name: "For bottom panel, set background-color to '{{ panels_background_color }}'"
+      community.general.dconf:
+        key: "/org/mate/panel/toplevels/bottom/background/color"
+        value: "'{{ panels_background_color }}'"
+        state: present
   become: true
   become_user: "{{ user_name }}"
 
