--- a/tasks/config/main.yml
+++ b/tasks/config/main.yml
@@ -34,6 +34,9 @@
 - name: "Configure top and bottom panels (i.e. 'system-tray') settings"
   ansible.builtin.include_tasks: panels.yml
 
+- name: "Configure main-menu (i.e. 'Start' menu) settings"
+  ansible.builtin.include_tasks: menu.yml
+
 - name: "Configure MATE Terminal app settings"
   ansible.builtin.include_tasks: mate_terminal.yml
 
