Config panel clock time format (12-hr, 24-hr)

--- a/defaults/main/panels.yml
+++ b/defaults/main/panels.yml
@@ -4,6 +4,9 @@ panels_available_items: ['menu-bar', 'notification-area', 'clock', 'show-desktop
 # color/transparency for both top and bottom panels
 panels_background_color: "rgba(36,31,49,0.80)"
 
+# use 24-hour clock format for the date/clock item in the top panel
+panels_clock_format_24_hr: false
+
 # height of the top panel (note: increases icon sizes as well)
 top_panel_size: 38
 
