--- a/tasks/config/panels.yml
+++ b/tasks/config/panels.yml
@@ -48,13 +48,13 @@
 
 - name: "Configure bottom panel settings"
   block:
-    - name: "For bottom panel, set panel-size to {{ size }}"
-      community.general.dconf:
-        key: "/org/mate/panel/toplevels/bottom/size"
-        value: "{{ size }}"
-        state: present
-      vars:
-        size: "{{ bottom_panel_size }}"
+    # - name: "For bottom panel, set panel-size to {{ size }}"
+    #   community.general.dconf:
+    #     key: "/org/mate/panel/toplevels/bottom/size"
+    #     value: "{{ size }}"
+    #     state: present
+    #   vars:
+    #     size: "{{ bottom_panel_size }}"
     # - name: "For bottom panel, set background-type to '{{ bg_type }}'"
     #   community.general.dconf:
     #     key: "/org/mate/panel/toplevels/bottom/background/type"
