--- a/tasks/config/panels.yml
+++ b/tasks/config/panels.yml
@@ -2,13 +2,18 @@
   block:
     - name: "For panels, remove the '{{ wksp_item }}' panel item"
       community.general.dconf:
-        key: "/org/mate/panel/objects/{{ wksp_item }}"
-        state: absent
-    - name: "For panels, set available items for all panels to {{ avail_items }}"
-      community.general.dconf:
-        key: "/org/mate/panel/general/object-id-list"
-        value: "{{ avail_items | string }}"
+        key: "/org/mate/panel/objects/{{ wksp_item }}/toplevel-id"
+        value: ""
         state: present
+    # - name: "For panels, remove the '{{ wksp_item }}' panel item"
+    #   community.general.dconf:
+    #     key: "/org/mate/panel/objects/{{ wksp_item }}"
+    #     state: absent
+    # - name: "For panels, set available items for all panels to {{ avail_items }}"
+    #   community.general.dconf:
+    #     key: "/org/mate/panel/general/object-id-list"
+    #     value: "{{ avail_items | string }}"
+    #     state: present
   vars:
     avail_items: ['menu-bar', 'notification-area', 'clock', 'show-desktop', 'window-list']
     wksp_item: "workspace-switcher"
