Add internal dconf-task, with 2nd try rescue
- community.general.dconf randomly fails when it can't find the dconf
  PID. This commit adds an include-task that wraps
  community.general.dconf, and tries to edit a setting again if the
  first try fails.

--- a/tasks/config/panels.yml
+++ b/tasks/config/panels.yml
@@ -1,12 +1,17 @@
 - name: "Configure top panel settings"
   block:
-    - name: "For top panel, set panel-size to {{ size }}"
-      community.general.dconf:
-        key: "/org/mate/panel/toplevels/top/size"
-        value: "{{ size }}"
-        state: present
+    - ansible.builtin.include_tasks: func/dconf.yml
       vars:
-        size: "{{ top_panel_size }}"
+        task_descrip: "For top panel, set panel-size to {{ top_panel_size }}"
+        key: "/org/mate/panel/toplevels/top/size"
+        value: "{{ top_panel_size }}"
+    # - name: "For top panel, set panel-size to {{ size }}"
+    #   community.general.dconf:
+    #     key: "/org/mate/panel/toplevels/top/size"
+    #     value: "{{ size }}"
+    #     state: present
+    #   vars:
+    #     size: "{{ top_panel_size }}"
     - name: "For top panel, set background-type to '{{ bg_type }}'"
       community.general.dconf:
         key: "/org/mate/panel/toplevels/top/background/type"
