--- a/tasks/config/panels.yml
+++ b/tasks/config/panels.yml
@@ -24,13 +24,19 @@
         key: "/org/mate/panel/toplevels/top/background/color"
         value: "'{{ panels_background_color }}'"
         state: present
-    - name: "For top panel clock, set time-format to '{{ time_format }}'"
-      community.general.dconf:
-        key: "/org/mate/panel/objects/clock/prefs/format"
-        value: "'{{ time_format }}'"
-        state: present
-      vars:
-        time_format: "{{ '24-hour' if top_panel_clock_format_24_hr else '12-hour' }}"
+  - ansible.builtin.include_tasks: func/dconf.yml
+    vars:
+      time_format: "{{ '24-hour' if top_panel_clock_format_24_hr else '12-hour' }}"
+      task_descrip: "For top panel clock, set time-format to '{{ time_format }}'"
+      key: "/org/mate/panel/objects/clock/prefs/format"
+      value: "'{{ time_format }}'"
+    # - name: "For top panel clock, set time-format to '{{ time_format }}'"
+    #   community.general.dconf:
+    #     key: "/org/mate/panel/objects/clock/prefs/format"
+    #     value: "'{{ time_format }}'"
+    #     state: present
+    #   vars:
+    #     time_format: "{{ '24-hour' if top_panel_clock_format_24_hr else '12-hour' }}"
   become: true
   become_user: "{{ user_name }}"
 
