--- a/tasks/config/panels.yml
+++ b/tasks/config/panels.yml
@@ -1,73 +1,6 @@
 - name: "Configure top panel settings"
-  block:
-    - ansible.builtin.include_tasks: func/dconf.yml
-      vars:
-        task_descrip: "For top panel, set panel-size to {{ top_panel_size }}"
-        key: "/org/mate/panel/toplevels/top/size"
-        value: "{{ top_panel_size }}"
-    # - name: "For top panel, set panel-size to {{ size }}"
-    #   community.general.dconf:
-    #     key: "/org/mate/panel/toplevels/top/size"
-    #     value: "{{ size }}"
-    #     state: present
-    #   vars:
-    #     size: "{{ top_panel_size }}"
-    - name: "For top panel, set background-type to '{{ bg_type }}'"
-      community.general.dconf:
-        key: "/org/mate/panel/toplevels/top/background/type"
-        value: "'{{ bg_type }}'"
-        state: present
-      vars:
-        bg_type: "color"
-    - name: "For top panel, set background-color to '{{ panels_background_color }}'"
-      community.general.dconf:
-        key: "/org/mate/panel/toplevels/top/background/color"
-        value: "'{{ panels_background_color }}'"
-        state: present
-    - ansible.builtin.include_tasks: func/dconf.yml
-      vars:
-        task_descrip: "For top panel clock, set time-format to '{{ time_format }}'"
-        key: "/org/mate/panel/objects/clock/prefs/format"
-        value: "'{{ time_format }}'"
-        time_format: "{{ '24-hour' if top_panel_clock_format_24_hr else '12-hour' }}"
-    # - name: "For top panel clock, set time-format to '{{ time_format }}'"
-    #   community.general.dconf:
-    #     key: "/org/mate/panel/objects/clock/prefs/format"
-    #     value: "'{{ time_format }}'"
-    #     state: present
-    #   vars:
-    #     time_format: "{{ '24-hour' if top_panel_clock_format_24_hr else '12-hour' }}"
-  become: true
-  become_user: "{{ user_name }}"
+  ansible.builtin.include_tasks: panels_top.yml
 
 - name: "Configure bottom panel settings"
-  block:
-    - name: "For bottom panel, remove the '{{ wksp_item }}' panel item"
-      community.general.dconf:
-        key: "/org/mate/panel/objects/{{ wksp_item }}/toplevel-id"
-        value: "''"
-        state: present
-      vars:
-        wksp_item: "workspace-switcher"
-    - name: "For bottom panel, set panel-size to {{ size }}"
-      community.general.dconf:
-        key: "/org/mate/panel/toplevels/bottom/size"
-        value: "{{ size }}"
-        state: present
-      vars:
-        size: "{{ bottom_panel_size }}"
-    - name: "For bottom panel, set background-type to '{{ bg_type }}'"
-      community.general.dconf:
-        key: "/org/mate/panel/toplevels/bottom/background/type"
-        value: "'{{ bg_type }}'"
-        state: present
-      vars:
-        bg_type: "color"
-    - name: "For bottom panel, set background-color to '{{ panels_background_color }}'"
-      community.general.dconf:
-        key: "/org/mate/panel/toplevels/bottom/background/color"
-        value: "'{{ panels_background_color }}'"
-        state: present
-  become: true
-  become_user: "{{ user_name }}"
+  ansible.builtin.include_tasks: panels_bottom.yml
 
